[package]
name = "isulad-agent"
version = "0.1.0"
edition = "2021"
authors = ["Huawei iSula Team"]
description = "as a remote runtime server, it is called by iSulad and written in rust"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.0"
bytes = "0.4.11"
libc = "0.2.71"
byteorder = "1.3.2"
log = "0.4.8"
nix = "0.16.1"
ttrpc = "0.4.2"
lazy_static = "1.4.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
unix-named-pipe = "0.2.0"

[build-dependencies]
protoc-rust = "2.8.0"
cmd_lib = "0.7.8"
ttrpc-codegen = "0.1.2"